# poulpe-cli

./: .env.example  .gitignore  README.md  aliases.yaml  pyproject.toml
commands/example/: bashcmd  bashcmd.yaml
commands/git/: ammend  ammend.yaml  branchfeature  branchfeature.yaml  commitammend.yaml  rebasemain  rebasemain.yaml  rebasemainforcepush  rebasemainforcepush.yaml  tagpush  tagpush.yaml
commands/kubectl/: node-labels.yaml
commands/mistral/: models  models.yaml
poulpe/: aliases.py  cli.py  completion.py  discovery.py  runner.py
